change footer links

--- a/index.html
+++ b/index.html
@@ -413,13 +413,13 @@
             <div class="footer-bottom">
                 <p>&copy; 2025 My Portfolio. All Rights Reserved.</p>
                 <div class="social-icons">
-                    <a href="https://github.com" target="_blank" class="social-icon click-effect">
+                    <a href="https://github.com/Gim128/Gim128" target="_blank" class="social-icon click-effect">
                         <i class="fab fa-github"></i>
                     </a>
-                    <a href="https://linkedin.com" target="_blank" class="social-icon click-effect">
+                    <a href="https://www.linkedin.com/in/gimhanpabasara?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" class="social-icon click-effect">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
-                    <a href="https://behance.net" target="_blank" class="social-icon click-effect">
+                    <a href="https://www.behance.net/gimhanpabasara" target="_blank" class="social-icon click-effect">
                         <i class="fab fa-behance"></i>
                     </a>
                 </div>
