change the link

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <p class="hero-subtitle animate">BEng (Hons) in Software Engineering (TOP UP) – London Metropolitan University (UK)</p>
                 <p class="hero-description animate">Passionate software Engineer with expertise in full-stack development, UI/UX design, and quality assurance.</p>
                 <div class="social-icons animate">
-                    <a href="https://github.com/Gim128/Gim128" target="_blank" class="social-icon click-effect">
+                    <a href="https://github.com/gimhanpabasara" target="_blank" class="social-icon click-effect">
                         <i class="fab fa-github"></i>
                     </a>
                     <a href="https://www.linkedin.com/in/gimhanpabasara?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" class="social-icon click-effect">
@@ -413,7 +413,7 @@
             <div class="footer-bottom">
                 <p>&copy; 2025 My Portfolio. All Rights Reserved.</p>
                 <div class="social-icons">
-                    <a href="https://github.com/Gim128/Gim128" target="_blank" class="social-icon click-effect">
+                    <a href="https://github.com/gimhanpabasara" target="_blank" class="social-icon click-effect">
                         <i class="fab fa-github"></i>
                     </a>
                     <a href="https://www.linkedin.com/in/gimhanpabasara?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" class="social-icon click-effect">
