remove unnessary code lines

--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
             <div class="footer-content">
                 <div class="footer-logo">
                     <a href="#" class="logo">GIMHAN PABASARA</a>
-                    <p>Software Engineer | UI/UX Designer | Product Developer | Software Tester (Manual | Automation)>
+                    <p>Software Engineer | UI/UX Designer | Product Developer | Software Tester (Manual | Automation)
                 </div>
                 <div class="footer-links">
                     <h3>Quick Links</h3>
