--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                             <span>Latest Version</span>
                         </div>
                     </div>
-                    <a href="https://drive.google.com/file/d/18dvsYGWUAkl0gVM4qChDwRp3iJmIppH-/view?usp=sharing" download class="download-btn click-effect" id="cv-download-btn">
+                    <a href="https://drive.google.com/file/d/1HAi2_WGGExpBuZ289ZfZ0BwObbmzy7El/view?usp=sharing" download class="download-btn click-effect" id="cv-download-btn">
                         <span class="btn-text">Download CV</span>
                         <span class="btn-icon">
                             <i class="fas fa-download"></i>
@@ -353,13 +353,13 @@
                         </div>
                     </div>
                     <div class="social-icons">
-                        <a href="https://github.com" target="_blank" class="social-icon click-effect">
+                        <a href="https://github.com/gimhanpabasara" target="_blank" class="social-icon click-effect">
                             <i class="fab fa-github"></i>
                         </a>
-                        <a href="https://linkedin.com" target="_blank" class="social-icon click-effect">
+                        <a href="https://www.linkedin.com/in/gimhanpabasara/" target="_blank" class="social-icon click-effect">
                             <i class="fab fa-linkedin-in"></i>
                         </a>
-                        <a href="https://behance.net" target="_blank" class="social-icon click-effect">
+                        <a href="https://www.behance.net/gimhanpabasara" target="_blank" class="social-icon click-effect">
                             <i class="fab fa-behance"></i>
                         </a>
                     </div>
@@ -416,7 +416,7 @@
                     <a href="https://github.com/gimhanpabasara" target="_blank" class="social-icon click-effect">
                         <i class="fab fa-github"></i>
                     </a>
-                    <a href="https://www.linkedin.com/in/gimhanpabasara?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" class="social-icon click-effect">
+                    <a href="https://www.linkedin.com/in/gimhanpabasara/" target="_blank" class="social-icon click-effect">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
                     <a href="https://www.behance.net/gimhanpabasara" target="_blank" class="social-icon click-effect">
