--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
             <div class="hero-image animate">
                 <div class="image-wrapper">
-                    <img src="./images/hero-img.jpg" alt="Profile Image" class="profile-img">
+                    <img src="./images/hero_image_01.png" alt="Profile Image" class="profile-img">
                     <div class="circle-animation"></div>
                 </div>
             </div>
