--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
                 <a href="#experience" class="nav-link">Experience</a>
                 <a href="#education" class="nav-link">Education</a>
                 <a href="#contact" class="nav-link">Contact</a>
+                <button class="theme-toggle click-effect" aria-label="Toggle dark mode">
+                    <i class="fas fa-moon"></i>
+                    <i class="fas fa-sun"></i>
+                </button>
             </div>
             <div class="hamburger">
                 <span class="bar"></span>
