--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -22,10 +25,6 @@
                 <a href="#experience" class="nav-link">Experience</a>
                 <a href="#education" class="nav-link">Education</a>
                 <a href="#contact" class="nav-link">Contact</a>
-                <button class="theme-toggle click-effect" aria-label="Toggle dark mode">
-                    <i class="fas fa-moon"></i>
-                    <i class="fas fa-sun"></i>
-                </button>
             </div>
             <div class="hamburger">
                 <span class="bar"></span>
@@ -51,6 +50,9 @@
                     </a>
                     <a href="https://www.behance.net/gimhanpabasara" target="_blank" class="social-icon click-effect">
                         <i class="fab fa-behance"></i>
+                    </a>
+                    <a href="https://github.com/gimhanpabasara" target="_blank" class="social-icon click-effect">
+                        <i class="fa-brands fa-upwork" style="color: #1c56ba;"></i>
                     </a>
                 </div>
                 <a href="#about" class="btn click-effect animate">Explore More <i class="fas fa-arrow-down"></i></a>
@@ -298,7 +300,7 @@
                         </div>
                         <div class="detail-item">
                             <i class="fas fa-database"></i>
-                            <span>2 MB Size</span>
+                            <span>187Kb Size</span>
                         </div>
                         <div class="detail-item">
                             <i class="fas fa-star"></i>
@@ -353,7 +355,7 @@
                         <i class="fas fa-map-marker-alt"></i>
                         <div>
                             <h3>Address</h3>
-                            <p>18/A, DHarmavijaya Pirivena Road, Kalutara South. 12000</p>
+                            <p>18/A, Dharmavijaya Pirivena Road, Kalutara South. 12000</p>
                         </div>
                     </div>
                     <div class="social-icons">
@@ -365,6 +367,10 @@
                         </a>
                         <a href="https://www.behance.net/gimhanpabasara" target="_blank" class="social-icon click-effect">
                             <i class="fab fa-behance"></i>
+                        </a>
+                        <a href="https://www.upwork.com/freelancers/~01dcaae0a432337c40?mp_source=share" target="_blank"
+                            class="social-icon click-effect">
+                            <i class="fa-brands fa-upwork" style="color: #1c56ba;"></i>
                         </a>
                     </div>
                 </div>
@@ -408,9 +414,9 @@
                 <div class="footer-contact">
                     <h3>Contact Info</h3>
                     <ul>
-                        <li><i class="fas fa-phone"></i> +94 76 8 616 628</li>
-                        <li><i class="fas fa-envelope"></i> gimhanpabasara4@gmail.com</li>
-                        <li><i class="fas fa-map-marker-alt"></i>18/A, DHarmavijaya Pirivena Road, Kalutara South. 12000</li>
+                        <li><i class="fa-solid fa-phone-volume" style="color: #ffffff;"></i> +94 76 8 616 628</li>
+                        <li><i class="fa-solid fa-envelope" style="color: #ffffff;"></i> gimhanpabasara4@gmail.com</li>
+                        <li><i class="fa-solid fa-map-pin" style="color: #ffffff;"></i></i>18/A, Dharmavijaya Pirivena Road, Kalutara South. 12000</li>
                     </ul>
                 </div>
             </div>
